--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--                                                                           -->
-<!-- Copyright (C) 2015-2015 The Helenus Driver Project Authors.               -->
+<!-- Copyright (C) 2015-2017 The Helenus Driver Project Authors.               -->
 <!--                                                                           -->
 <!-- Licensed under the Apache License, Version 2.0 (the "License");           -->
 <!-- you may not use this file except in compliance with the License.          -->
@@ -431,6 +431,43 @@
       </properties>
     </profile>
     <profile>
+      <id>javadoc</id>
+      <activation>
+        <property>
+          <name>javadoc</name>
+        </property>
+      </activation>
+      <build>
+	<plugins>
+	  <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-javadoc-plugin</artifactId>
+	    <version>2.9.1</version>
+	    <executions>
+	      <execution>
+		<id>attach-javadocs</id>
+		<goals>
+		  <goal>jar</goal>
+		</goals>
+	      </execution>
+	    </executions>
+	    <configuration>
+	      <bottom><![CDATA[Copyright (C) 2015-2017 <a href="https://www.helenus.org">The Helenus Driver Project</a> Authors.]]>
+	      </bottom>
+	      <detectLinks>true</detectLinks>
+	      <tags>
+		<tag>
+		  <name>copyright</name>
+		  <placement>a</placement>
+		  <head>Copyright:</head>
+		</tag>
+	      </tags>
+	    </configuration>
+	  </plugin>
+	</plugins>
+      </build>
+    </profile>    
+    <profile>
       <id>release</id>
       <build>
 	<plugins>
@@ -460,7 +497,7 @@
 	      </execution>
 	    </executions>
 	    <configuration>
-	      <bottom><![CDATA[Copyright (C) 2015-2016 <a href="https://www.helenus.org">The Helenus Driver Project</a> Authors.]]>
+	      <bottom><![CDATA[Copyright (C) 2015-2017 <a href="https://www.helenus.org">The Helenus Driver Project</a> Authors.]]>
 	      </bottom>
 	      <detectLinks>true</detectLinks>
 	      <tags>
