--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <groupId>org.helenus</groupId>
   <artifactId>helenus</artifactId>
   <packaging>pom</packaging>
-  <version>3.0.1</version>
+  <version>3.0.2-SNAPSHOT</version>
 
   <name>Helenus</name>
   <description>JPA-like syntax for annotating POJO classes for persistence via Cassandra's Java driver</description>
@@ -45,7 +45,7 @@
     <connection>scm:git:git://github.com/helenusdriver/helenus.git</connection>
     <developerConnection>scm:git:git@github.com:helenusdriver/helenus.git</developerConnection>
     <url>http://github.com/helenusdriver/helenus/tree/master/</url>
-    <tag>helenus-3.0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
@@ -77,7 +77,7 @@
   </developers>
   
   <properties>
-    <helenus-version>3.0.1</helenus-version>
+    <helenus-version>3.0.2-SNAPSHOT</helenus-version>
     
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     
