--- a/commons-test/pom.xml
+++ b/commons-test/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>org.helenus</groupId>
     <artifactId>helenus</artifactId>
-    <version>3.0.2-SNAPSHOT</version>
+    <version>3.0.2</version>
   </parent>
 
   <artifactId>helenus-commons-test</artifactId>
