--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>org.helenus</groupId>
     <artifactId>helenus</artifactId>
-    <version>3.0.3-SNAPSHOT</version>
+    <version>3.0.3</version>
   </parent>
   
   <artifactId>helenus-tomcat</artifactId>
