--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>org.helenus</groupId>
     <artifactId>helenus</artifactId>
-    <version>3.0.3</version>
+    <version>3.0.4-SNAPSHOT</version>
   </parent>
   
   <artifactId>helenus-impl</artifactId>
